[package]
name = "srcds-fix"
version = "0.1.1"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
minidl = "0.1.6"
retour = "0.3.1"
retour-utils = "0.2.1"
thiserror = "1.0.66"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }

[target.'cfg(linux)'.dependencies]
rustix = { version = "0.38.38", features = ["mm"] }